package com.learning.patterns.structural.decorator;

public interface PaymentProcessor {
    void processPayment(double amount);
}
